# devsecops-application-security-pipeline

./: .checkov.yml  .coverage 2  .coverage 3  .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md  repository-metadata.md
.github/ISSUE_TEMPLATE/: config.yml  security-finding.yml  security-improvement.yml
.github/workflows/: api-security.yml  appsec.yml  ci.yml  container-security.yml  developer-enablement.yml  findings.yml  integration-contract.yml  portfolio-readiness.yml  release-assurance.yml  reusable-appsec.yml  reusable-quality.yml  reusable-security-evidence.yml  security-champions.yml  security-evidence.yml  terraform-security.yml  vulnerability-management.yml
config/evidence/: control-mapping.yaml  evidence-policy.yaml  (+4 more)
docs/: README.md  limitations.md  roadmap.md
infrastructure/: README.md  backend.tf.example  locals.tf  outputs.tf  variables.tf
scripts/: __init__.py  appsec_tools.py  developer_check.py  dynamic_security_tools.py  generate_dev_token.py  security_doctor.py  terraform_local.py  validate_local_prerequisites.py
security-champions/: 90-day-plan.md  README.md  champion-checklist.md  champion-role.md  communication-guide.md  escalation-guide.md  limitations.md  maturity-model.md  metrics.md  monthly-session-plan.md  onboarding-checklist.md  onboarding-guide.md  operating-model.md  programme-charter.md  recognition-model.md  succession-and-continuity.md
tests/: conftest.py
(+757 files in other folders)
