[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genomic-research-access-api"
version = "0.1.0"
description = "Synthetic Genomic Research Access API for a DevSecOps portfolio milestone."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Portfolio project maintainer" }]
dependencies = [
  "fastapi==0.116.1",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "uvicorn==0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "mypy==1.16.1",
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "ruff==0.12.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["genomic_research_access_api"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
